--- a/package.json
+++ b/package.json
@@ -56,9 +56,9 @@
   "author": "liudaojie <liudaojie@yy.com>",
   "license": "MIT",
   "dependencies": {
-    "@types/lodash": "^4.14.165",
+    "@types/extend": "^3.0.1",
     "@types/request": "^2.48.5",
-    "lodash": "^4.17.20",
+    "extend": "^3.0.2",
     "request": "^2.88.2"
   }
 }
